# fiber-link-sim

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  STATUS.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  nightly.yml  project-field-sync.yml  seed-labels.yml
docs/: benchmarking.md  ci_checklist.md  hft_latency_demo.md  stages_and_flags.md  waveform_examples.md
docs/adr/: 0001-lite-simulation-pipeline.md  0002-phys-pipeline-base-types.md  0003-opticommpy-adapter-v0.1.md  0004-qpsk-long-haul-stage-coverage.md  0005-error-handling-timeout-policy.md  0006-artifact-reference-policy.md  0007-autotune-policy.md  0008-distribution-artifacts-cli-entrypoint.md  0009-latency-model.md  0010-ldpc-fec-fallback.md  0011-state-refs-artifact-store.md  0012-latency-budget-model.md  0013-temperature-aware-latency-and-spread.md  0014-phase4-pipeline-cache-scheduler.md  0015-v1-front-end-modeling-scope.md  0016-dsp-synchronization-contract.md  0017-latency-total-inclusion-switches.md  0018-environment-parameter-contract.md  0019-artifact-selection-contract.md  INDEX.md
docs/refs/: opticommpy_adapter_notes.md  phys_pipeline_usage.md  physics_context.md
docs/roadmaps/: phys_pipeline_readiness.md  qpsk_longhaul.md  version_1_release.md
scripts/: __init__.py  adr_tools.py  benchmark_simulate.py  generate_qpsk_story.py
src/fiber_link_sim/: __init__.py  _compat.py  artifacts.py  benchmarking.py  cli.py  latency.py  metrics.py  pipeline.py  pipeline_execution.py  simulate.py  utils.py
tests/: test_adc_quantization.py  test_artifacts.py  test_benchmark_script.py  test_design_decisions.py  test_dsp_demap.py  test_latency_model.py  test_latency_temperature.py  test_opticommpy_adapter_calls.py  test_opticommpy_param_mapping.py  test_package_data.py  test_package_resources.py  test_pipeline_execution_phase4.py  test_placeholder.py  test_schema_alignment.py  test_simulation_contracts.py  test_simulation_determinism.py  test_simulation_integration.py  test_state_refs.py
tests/analytic/: test_awgn_qpsk_ber.py  (+3 more)
(+38 files in other folders)
