[project]
name = "fiber-link-sim"
version = "1.0.0"
description = "Physics-first simulator core for fiber-optic communication links"
authors = [
  { name = "Ryaan Lari", email = "lari2@illinois.edu" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "numpy",
  "scipy",
  "pydantic>=2.7",
  "phys-pipeline",
  "OptiCommPy",
]

[project.scripts]
fiber-link-sim = "fiber_link_sim.cli:main"
[project.optional-dependencies]
dev = [
  # test & tooling you actually run locally
  "pytest",
  "pytest-cov",
  "black",
  "ruff",
  "mypy",
  "codespell",
  "pre-commit",
  "matplotlib",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fiber_link_sim = ["schema/*.json", "schema/README.md", "schema/examples/*.json"]

# --- Black ---
[tool.black]
line-length = 100
target-version = ["py311"]


# --- Ruff (lint) ---
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]  
ignore = []  # add codes you intentionally ignore

# --- mypy ---
[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = "src"

# --- pydantic's mypy plugin ---
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


# --- codespell ---
[tool.codespell]
# add any frequent false positives here
ignore-words-list = "teh,nd,ser"
skip = "poetry.lock,*.lock,*.svg,*.png,*.jpg"
# You can also narrow paths if needed:
# path = "src,tests,docs,examples"

# --- coverage ---
[tool.coverage.run]
branch = true
source = ["fiber_link_sim"]

[tool.coverage.report]
show_missing = true
skip_covered = true
